Nebula Nomad with changes 1

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src="assets/player4.png" alt="Nebula Nomad spaceship 4" onclick="chooseShip('assets/player4.png', 15)">
             <img src="assets/player5.png" alt="Nebula Nomad spaceship 5" onclick="chooseShip('assets/player5.png', 7.5)">
         </div>
-        <p class="coffee-note">Enjoying the game? <a href="https://www.buymeacoffee.com/yourname" target="_blank">Buy me a coffee! ☕</a></p>
+        <p class="coffee-note">Enjoying the game? <a href="https://www.buymeacoffee.com/TheRetroGameCoder" target="_blank">Buy me a coffee! ☕</a></p>
     </div>
 
     <canvas id="gameCanvas"></canvas>
